syntax = "proto3";

package ItemApi;

service ItemGrpc {
 rpc GetItem (GetItemReq) returns (GetItemRes);
}

message GetItemReq {
 int32 id = 1;
}

message GetItemRes {
 int32 id = 1;
 string name = 2;
 string description = 3;
 double price = 4;
}